# hopsan

./: .appveyor.yml  .gitmodules  .travis.yml  CMakeLists.txt  Hopsan-release-notes.txt  makeDebRelease.sh  makeWindowsRelease.py
Dependencies/: .gitattributes  .gitignore  dependencies.xml  download-dependencies.py  fmilibrary.pri  pythonqt.pri  setHopsanBuildPaths.bat  setupAll.sh  setupFMILibrary.bat  setupFMILibrary.sh  setupKatex.bat  setupKatex.sh  setupPythonQt.sh  setupZeroMQ.bat
HopsanCLI/: CMakeLists.txt  CliUtilities.cpp  HopsanCLI.pro  ModelUtilities.cpp  ModelValidation.cpp  main.cpp
HopsanCore/include/ComponentUtilities/: PLOParser.h
HopsanCore/src/ComponentUtilities/: PLOParser.cpp
HopsanGUI/: AnimatedConnector.cpp  CMakeLists.txt  Configuration.cpp  Configuration.h  CoreAccess.cpp  DesktopHandler.cpp  GUIConnector.cpp  GUIConnector.h  GUIPort.cpp  GraphicsView.cpp  HcomHandler.cpp  HopsanGUI.pro  LibraryHandler.cpp  LibraryHandler.h  LogDataHandler2.cpp  LogVariable.cpp  MainWindow.cpp  MessageHandler.cpp  MessageHandler.h  ModelHandler.cpp  OptimizationHandler.cpp  PlotArea.cpp  PlotHandler.cpp  PlotTab.cpp  PlotWindow.cpp  SimulationThreadHandler.cpp  UndoStack.cpp  UndoStack.h  loadFunctions.cpp  loadFunctions.h  main.cpp
HopsanGUI/Dialogs/: AboutDialog.cpp  AnimatedIconPropertiesDialog.cpp  ClearLeftoverDataDialog.cpp  ClearLeftoverDataDialog.h  ComponentPropertiesDialog3.cpp  ContainerPortPropertiesDialog.cpp  MovePortsDialog.cpp  NumHopScriptDialog.cpp  OptimizationDialog.cpp  OptimizationScriptWizard.cpp  OptionsDialog.cpp  SensitivityAnalysisDialog.cpp
HopsanGUI/GUIObjects/: AnimatedComponent.cpp  AnimatedComponent.h  ComponentObject.cpp  ComponentObject.h  GUIComponent.cpp  GUIComponent.h  GUIContainerObject.cpp  GUIContainerObject.h  GUIWidgets.cpp  GUIWidgets.h  ModelObject.cpp  ModelObject.h  ModelObjectAppearance.cpp  ModelObjectAppearance.h  SystemObject.cpp  SystemObject.h  SystemPortObject.cpp  SystemPortObject.h  WidgetObject.cpp  WidgetObject.h  WorkspaceObject.cpp  WorkspaceObject.h
HopsanGUI/Utilities/: GUIUtilities.cpp  HelpPopUpWidget.cpp  XMLUtilities.cpp
HopsanGUI/Widgets/: AnimationWidget.cpp  DebuggerWidget.cpp  FindWidget.cpp  HVCWidget.cpp  HcomWidget.cpp  LibraryWidget.cpp  LibraryWidget.h  ModelWidget.cpp  PlotWidget2.cpp  QuickNavigationWidget.cpp  SystemParametersWidget.cpp  UndoWidget.cpp  WelcomeWidget.cpp  WelcomeWidget.h
HopsanGUI/translations/: hopsangui_de_DE.ts  hopsangui_sv_SE.ts
HopsanGenerator/: HopsanGenerator.pro
HopsanGenerator/src/: HopsanGeneratorLib.cpp
HopsanGenerator/src/generators/: HopsanFMIGenerator.cpp
Models/Example Models/: Bouncing Ball.hmf
Models/Example Models Validations/: Bouncing Ball.hvc  Bouncing Ball.hvd
UnitTests/hopsanclitest/: CMakeLists.txt
buildDebPackage/: copyInstallHopsan.sh
buildMacApp/: copyInstallHopsan.sh
componentLibraries/exampleComponentLib/: exampleComponentLib.cpp  exampleComponentLib.xml
dependencies/: discount.cmake  download-dependencies.py  hdf5.cmake  msgpack.cmake  setHopsanBuildPaths.sh  zeromq.cmake
doc/: CMakeLists.txt
hopsanremote/hopsanaddressserver/: hopsanaddressserver.pro
hopsanremote/hopsanremoteclient/: hopsanremoteclient.pro
hopsanremote/hopsanserver/: hopsanserver.pro
hopsanremote/hopsanservermonitor/: hopsanservermonitor.pro
hopsanremote/libhopsanremoteclient/: CMakeLists.txt
hopsanremote/libhopsanremotecommon/: CMakeLists.txt
hopsanutils/: CMakeLists.txt  files.cmake
hopsanutils/include/hopsanutils/: CommonUtilities.h  ModelUtilities.h
hopsanutils/src/: CommonUtilities.cpp  ModelUtilities.cpp
hopsanutils/tests/: CMakeLists.txt  tst_modelutils.cpp
packaging/: copyInstallHopsan.sh
packaging/deb/bookworm/debian/: rules
snap/local/: snapcraft.yaml.in
(+4 files in other folders)
